force-app/main/default/objects/Product_Group__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF Workbook</fullName>
            </value>
            <value>
                <fullName>Church Campaign Kit</fullName>
            </value>
            <value>
                <fullName>Streaming with One Workbook</fullName>
            </value>
            <value>
                <fullName>Streaming with 2 workbooks</fullName>
            </value>
            <value>
                <fullName>Devotional</fullName>
            </value>
            <value>
                <fullName>Free Gift</fullName>
            </value>
            <value>
                <fullName>French Bible School on Wheels 1</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Leader&apos;s Guide</fullName>
            </value>
            <value>
                <fullName>Super Book 2</fullName>
            </value>
            <value>
                <fullName>Super Book 1</fullName>
            </value>
            <value>
                <fullName>Streaming with 10 workbooks</fullName>
            </value>
            <value>
                <fullName>Teachers Kit with 10 workbooks</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Leader&apos;s Kit</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>God Pocket Pack</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Workbook</fullName>
            </value>
            <value>
                <fullName>DVD</fullName>
            </value>
            <value>
                <fullName>Streaming Video</fullName>
            </value>
            <value>
                <fullName>OPTIONS_HIDDEN_PRODUCT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>