force-app/main/default/objects/Product_Group__c/fields/Shopify_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Shopify Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>