force-app/main/default/objects/Product_Group__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Teach Every Nation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>