force-app/main/default/objects/Product_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product_Name__c</columns>
    <columns>Product_Type__c</columns>
    <columns>SKU__c</columns>
    <columns>Status__c</columns>
    <columns>Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>